--- a/before_body.tex
+++ b/before_body.tex
@@ -1,5 +1,6 @@
 \thispagestyle{empty}
 \includepdf{cover.pdf}
-
+\thispagestyle{empty}
 \let\maketitle\oldmaketitle
 \maketitle
+\thispagestyle{empty}
