--- a/book.bib
+++ b/book.bib
@@ -111,7 +111,12 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn523883 },
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
 
-
+@book{barker-pos,
+  title={Philosophy of science: A new introduction},
+  author={Barker, Gillian and Kitcher, Philip},
+  year={2014},
+  publisher={Oxford University Press New York}
+}
 
 @book{johansson2016philosophy,
   title={Philosophy of science for scientists},
@@ -784,3 +789,21 @@ publisher={University of Prince Edward Island}
 @misc{reutersUN2018, title={{U}.{N}. investigators cite {F}acebook role in {M}yanmar crisis}, url={https://www.reuters.com/article/us-myanmar-rohingya-facebook-idUKKCN1GO2PN}, journal={Reuters}, author={Miles, Tom}, year={2018}}
 
 @misc{nytimesGenocide2018, title={{A} {G}enocide {I}ncited on {F}acebook, {W}ith {P}osts {F}rom {M}yanmar's {M}ilitary}, url={https://www.nytimes.com/2018/10/15/technology/myanmar-facebook-genocide.html}, journal={New York Times}, author={Mozur, Paul}, year={2018}}
+
+
+@article{potochnik2015diverse,
+  title={The diverse aims of science},
+  author={Potochnik, Angela},
+  journal={Studies in History and Philosophy of Science Part A},
+  volume={53},
+  pages={71--80},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@book{howson2006scientific,
+  title={Scientific reasoning: the Bayesian approach},
+  author={Howson, Colin and Urbach, Peter},
+  year={2006},
+  publisher={Open Court Publishing}
+}
