--- a/preamble.tex
+++ b/preamble.tex
@@ -39,6 +39,15 @@
   fontlower=\small,
   arc=3pt}
 
+\newtcolorbox{simplebox}{
+  colback=white,
+  colframe=black,
+  coltext=black,
+  boxsep=4pt,
+  fontupper=\small,
+  fontlower=\small,
+  arc=3pt
+}
 
 \newenvironment{rnote}{\par\raggedleft}{\par}
 
