--- a/04-EmpiricalPractices-and-Models.Rmd
+++ b/04-EmpiricalPractices-and-Models.Rmd
@@ -12,6 +12,13 @@ I would like to introduce this chapter in the same way the Book of Why [@book-of
 
 This example synthesizes the process of controlled experiments employed nowadays in experimental science. The overseer poses a question, *will the vegetarian diet cause my servants to lose weight?*. There it is our hypothesis. To address the question, Daniel proposed a methodology. Divide the servants in two identical groups. Give one group a new treatment (e.g. diet or a drug), while another group (control) remains under no special treatment. Of course, the two groups should be comparable and representative of some population in order to transfer the conclusions to the population at large. This process allowed Daniel to show the *causal effect* (beware, we will tackle this in Chapter \@ref(stats-abuse)) of the diet. Moreover, Daniel's experiment was prospective (in contrast to retrospective studies) as the groups were chosen in advance. Prospective controlled trials are a common characteristic of sound science. Still, Daniel did not think of everything, but we will see that in Chapter \@ref(stats-abuse).
 
+:::: {.simplebox data-latex=""}
+::: { data-latex=""}
+**Course objectives**
+:::
+This chapter addresses objectives 5 to 8 by illustrating the varied roles of data across experiments, observational studies, and models. Aimed at students unfamiliar with scientific studies and causal inference, it highlights their limits through examples that raise questions to be tackled in the chapter dedicated to experimental control and statistical abuse.
+::::
+
 ## What is an experiment?
 
 Many data scientists believe their role should be limited to data analysis, but experiment design is fundamental for data collection, which conditions how the data must be analysed. Conclusions drawn from data can be biased or determined by decisions and errors taken during experiment design. Understanding this can help you spot issues during the data analysis and ask the right questions to your colleagues in charge of the experiments. 
